# ChainCredit

./: README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts  企业信用数据.xlsx
src/: App.tsx  main.tsx
src-tauri/: .env  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/credit/: Cargo.toml
src-tauri/credit/src/: lib.rs
src-tauri/src/: ai.rs  excel.rs  lib.rs  main.rs  solana.rs
src-tauri/src/excel/: calc.rs  types.rs
src-tauri/src/solana/: types.rs
src/components/: DataVisualization.tsx  ExcelUploader.tsx  ModeToggle.tsx  ThemeContext.tsx  TitleBar.tsx
src/components/AIAssistant/: MarkdownComponents.tsx  SpecialQuestions.tsx  index.tsx  types.ts  utils.ts
src/components/Admin/: CompanyDeleteDialog.tsx  CompanyDetailDialog.tsx  CompanyEditDialog.tsx  CompanyTable.tsx  SearchBar.tsx  StatsCards.tsx  index.tsx  types.ts
src/components/DataVisualization/: AIChatDrawer.tsx  CompanyInfoCard.tsx  CompanyList.tsx  CreditStrategyCard.tsx  KeyMetricsCard.tsx  RiskMetricsCard.tsx  ScoreChart.tsx  index.tsx  types.ts  utils.ts
src/components/TextType/: TextType.tsx
src/page/: AppLayout.tsx  Dashboard.tsx  Upload.tsx  login.tsx  main.tsx
src/utils/: store.ts
