[package]
name = "chaincredit"
version = "0.1.0"
description = "A Tauri App"
authors = ["Alex"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "chaincredit_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1"
calamine = "0.31.0"
tauri-plugin-dialog = "2"
rust_xlsxwriter = "0.90.2"
anchor-client = "0.31.1"
tokio = { version = "1.47.1", features = ["full"] }
credit = { path = "./credit" }
openssl = { version = "0.10.73", features = ["vendored"] }
